hw2/y.output
Terminals unused in grammar

    SEMICOLON
    IF
    ELSE
    FOR


Grammar

    0 $accept: Program $end

    1 Program: NewScope StatementList

    2 StatementList: Statement ';' StatementList
    3              | Statement ';'
    4              | WHILE '(' Expr LeaveExpr ')' NewScope StatementList EndScope StatementList
    5              | WHILE '(' Expr LeaveExpr ')' NewScope StatementList EndScope

    6 NewScope: '{'
    7         | %empty

    8 EndScope: '}'

    9 Statement: DeclarationStmt
   10          | Expr LeaveExpr Assign
   11          | IfStmt
   12          | LoopStmt
   13          | PrintStmt

   14 DeclarationStmt: Type Ident LitInit
   15                | Type Ident IndHead Expr IndEnd

   16 Type: TypeName

   17 TypeName: INT
   18         | FLOAT
   19         | STRING
   20         | BOOL

   21 Ident: IDENT

   22 LitInit: '=' Literal
   23        | '=' Boolean
   24        | %empty

   25 Literal: INT_LIT
   26        | FLOAT_LIT
   27        | '"' str '"'

   28 str: STRING_LIT

   29 Expr: AndExpr or Expr
   30     | AndExpr

   31 LeaveExpr: %empty

   32 or: OR

   33 Assign: '=' Expr LeaveExpr
   34       | %empty

   35 AndExpr: CmprExpr and AndExpr
   36        | CmprExpr

   37 and: AND

   38 CmprExpr: CmprExpr Cmpr AddExpr
   39         | AddExpr

   40 Cmpr: '<'
   41     | '>'
   42     | SMALL_EQU
   43     | BIG_EQU
   44     | EQUAL
   45     | NOT_EQUAL

   46 AddExpr: MulExpr Add AddExpr
   47        | MulExpr

   48 Add: '+'
   49    | '-'

   50 MulExpr: UnaExpr Mul MulExpr
   51        | UnaExpr

   52 Mul: '*'
   53    | '/'
   54    | '%'

   55 UnaExpr: SignOpt Atom
   56        | Reverse Boolean

   57 SignOpt: '+' SignOpt
   58        | '-' SignOpt
   59        | %empty

   60 Reverse: '!' Reverse
   61        | %empty

   62 Atom: Ident
   63     | Ident OneArith
   64     | OneArith Ident
   65     | Literal
   66     | BracHead Expr BracEnd
   67     | Ident IndHead Expr IndEnd

   68 OneArith: INC
   69         | DEC

   70 Boolean: TRUE
   71        | FALSE

   72 PrintStmt: PRINT '(' Expr LeavePrint

   73 LeavePrint: ')'

   74 IndHead: '['

   75 IndEnd: ']'

   76 BracHead: '('

   77 BracEnd: ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 60
    '"' (34) 27
    '%' (37) 54
    '(' (40) 4 5 72 76
    ')' (41) 4 5 73 77
    '*' (42) 52
    '+' (43) 48 57
    '-' (45) 49 58
    '/' (47) 53
    ';' (59) 2 3
    '<' (60) 40
    '=' (61) 22 23 33
    '>' (62) 41
    '[' (91) 74
    ']' (93) 75
    '{' (123) 6
    '}' (125) 8
    error (256)
    INT (258) 17
    FLOAT (259) 18
    BOOL (260) 20
    STRING (261) 19
    SEMICOLON (262)
    IfStmt (263) 11
    LoopStmt (264) 12
    PRINT (265) 72
    INC (266) 68
    DEC (267) 69
    BIG_EQU (268) 43
    SMALL_EQU (269) 42
    EQUAL (270) 44
    NOT_EQUAL (271) 45
    AND (272) 37
    OR (273) 32
    TRUE (274) 70
    FALSE (275) 71
    IF (276)
    ELSE (277)
    WHILE (278) 4 5
    FOR (279)
    INT_LIT <i_val> (280) 25
    FLOAT_LIT <f_val> (281) 26
    STRING_LIT <s_val> (282) 28
    IDENT <s_val> (283) 21


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    Program (47)
        on left: 1
        on right: 0
    StatementList (48)
        on left: 2 3 4 5
        on right: 1 2 4 5
    NewScope (49)
        on left: 6 7
        on right: 1 4 5
    EndScope (50)
        on left: 8
        on right: 4 5
    Statement (51)
        on left: 9 10 11 12 13
        on right: 2 3
    DeclarationStmt (52)
        on left: 14 15
        on right: 9
    Type (53)
        on left: 16
        on right: 14 15
    TypeName (54)
        on left: 17 18 19 20
        on right: 16
    Ident (55)
        on left: 21
        on right: 14 15 62 63 64 67
    LitInit (56)
        on left: 22 23 24
        on right: 14
    Literal (57)
        on left: 25 26 27
        on right: 22 65
    str (58)
        on left: 28
        on right: 27
    Expr (59)
        on left: 29 30
        on right: 4 5 10 15 29 33 66 67 72
    LeaveExpr (60)
        on left: 31
        on right: 4 5 10 33
    or (61)
        on left: 32
        on right: 29
    Assign (62)
        on left: 33 34
        on right: 10
    AndExpr (63)
        on left: 35 36
        on right: 29 30 35
    and (64)
        on left: 37
        on right: 35
    CmprExpr (65)
        on left: 38 39
        on right: 35 36 38
    Cmpr (66)
        on left: 40 41 42 43 44 45
        on right: 38
    AddExpr (67)
        on left: 46 47
        on right: 38 39 46
    Add (68)
        on left: 48 49
        on right: 46
    MulExpr (69)
        on left: 50 51
        on right: 46 47 50
    Mul (70)
        on left: 52 53 54
        on right: 50
    UnaExpr (71)
        on left: 55 56
        on right: 50 51
    SignOpt (72)
        on left: 57 58 59
        on right: 55 57 58
    Reverse (73)
        on left: 60 61
        on right: 56 60
    Atom (74)
        on left: 62 63 64 65 66 67
        on right: 55
    OneArith (75)
        on left: 68 69
        on right: 63 64
    Boolean (76)
        on left: 70 71
        on right: 23 56
    PrintStmt (77)
        on left: 72
        on right: 13
    LeavePrint (78)
        on left: 73
        on right: 72
    IndHead (79)
        on left: 74
        on right: 15 67
    IndEnd (80)
        on left: 75
        on right: 15 67
    BracHead (81)
        on left: 76
        on right: 66
    BracEnd (82)
        on left: 77
        on right: 66


State 0

    0 $accept: . Program $end

    '{'  shift, and go to state 1

    $default  reduce using rule 7 (NewScope)

    Program   go to state 2
    NewScope  go to state 3


State 1

    6 NewScope: '{' .

    $default  reduce using rule 6 (NewScope)


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: NewScope . StatementList

    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    BOOL      shift, and go to state 7
    STRING    shift, and go to state 8
    IfStmt    shift, and go to state 9
    LoopStmt  shift, and go to state 10
    PRINT     shift, and go to state 11
    WHILE     shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    StatementList    go to state 16
    Statement        go to state 17
    DeclarationStmt  go to state 18
    Type             go to state 19
    TypeName         go to state 20
    Expr             go to state 21
    AndExpr          go to state 22
    CmprExpr         go to state 23
    AddExpr          go to state 24
    MulExpr          go to state 25
    UnaExpr          go to state 26
    SignOpt          go to state 27
    Reverse          go to state 28
    PrintStmt        go to state 29


State 4

    0 $accept: Program $end .

    $default  accept


State 5

   17 TypeName: INT .

    $default  reduce using rule 17 (TypeName)


State 6

   18 TypeName: FLOAT .

    $default  reduce using rule 18 (TypeName)


State 7

   20 TypeName: BOOL .

    $default  reduce using rule 20 (TypeName)


State 8

   19 TypeName: STRING .

    $default  reduce using rule 19 (TypeName)


State 9

   11 Statement: IfStmt .

    $default  reduce using rule 11 (Statement)


State 10

   12 Statement: LoopStmt .

    $default  reduce using rule 12 (Statement)


State 11

   72 PrintStmt: PRINT . '(' Expr LeavePrint

    '('  shift, and go to state 30


State 12

    4 StatementList: WHILE . '(' Expr LeaveExpr ')' NewScope StatementList EndScope StatementList
    5              | WHILE . '(' Expr LeaveExpr ')' NewScope StatementList EndScope

    '('  shift, and go to state 31


State 13

   57 SignOpt: '+' . SignOpt

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 59 (SignOpt)

    SignOpt  go to state 32


State 14

   58 SignOpt: '-' . SignOpt

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 59 (SignOpt)

    SignOpt  go to state 33


State 15

   60 Reverse: '!' . Reverse

    '!'  shift, and go to state 15

    $default  reduce using rule 61 (Reverse)

    Reverse  go to state 34


State 16

    1 Program: NewScope StatementList .

    $default  reduce using rule 1 (Program)


State 17

    2 StatementList: Statement . ';' StatementList
    3              | Statement . ';'

    ';'  shift, and go to state 35


State 18

    9 Statement: DeclarationStmt .

    $default  reduce using rule 9 (Statement)


State 19

   14 DeclarationStmt: Type . Ident LitInit
   15                | Type . Ident IndHead Expr IndEnd

    IDENT  shift, and go to state 36

    Ident  go to state 37


State 20

   16 Type: TypeName .

    $default  reduce using rule 16 (Type)


State 21

   10 Statement: Expr . LeaveExpr Assign

    $default  reduce using rule 31 (LeaveExpr)

    LeaveExpr  go to state 38


State 22

   29 Expr: AndExpr . or Expr
   30     | AndExpr .

    OR  shift, and go to state 39

    $default  reduce using rule 30 (Expr)

    or  go to state 40


State 23

   35 AndExpr: CmprExpr . and AndExpr
   36        | CmprExpr .
   38 CmprExpr: CmprExpr . Cmpr AddExpr

    BIG_EQU    shift, and go to state 41
    SMALL_EQU  shift, and go to state 42
    EQUAL      shift, and go to state 43
    NOT_EQUAL  shift, and go to state 44
    AND        shift, and go to state 45
    '<'        shift, and go to state 46
    '>'        shift, and go to state 47

    $default  reduce using rule 36 (AndExpr)

    and   go to state 48
    Cmpr  go to state 49


State 24

   39 CmprExpr: AddExpr .

    $default  reduce using rule 39 (CmprExpr)


State 25

   46 AddExpr: MulExpr . Add AddExpr
   47        | MulExpr .

    '+'  shift, and go to state 50
    '-'  shift, and go to state 51

    $default  reduce using rule 47 (AddExpr)

    Add  go to state 52


State 26

   50 MulExpr: UnaExpr . Mul MulExpr
   51        | UnaExpr .

    '*'  shift, and go to state 53
    '/'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 51 (MulExpr)

    Mul  go to state 56


State 27

   55 UnaExpr: SignOpt . Atom

    INC        shift, and go to state 57
    DEC        shift, and go to state 58
    INT_LIT    shift, and go to state 59
    FLOAT_LIT  shift, and go to state 60
    IDENT      shift, and go to state 36
    '('        shift, and go to state 61
    '"'        shift, and go to state 62

    Ident     go to state 63
    Literal   go to state 64
    Atom      go to state 65
    OneArith  go to state 66
    BracHead  go to state 67


State 28

   56 UnaExpr: Reverse . Boolean

    TRUE   shift, and go to state 68
    FALSE  shift, and go to state 69

    Boolean  go to state 70


State 29

   13 Statement: PrintStmt .

    $default  reduce using rule 13 (Statement)


State 30

   72 PrintStmt: PRINT '(' . Expr LeavePrint

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 71
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 31

    4 StatementList: WHILE '(' . Expr LeaveExpr ')' NewScope StatementList EndScope StatementList
    5              | WHILE '(' . Expr LeaveExpr ')' NewScope StatementList EndScope

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 72
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 32

   57 SignOpt: '+' SignOpt .

    $default  reduce using rule 57 (SignOpt)


State 33

   58 SignOpt: '-' SignOpt .

    $default  reduce using rule 58 (SignOpt)


State 34

   60 Reverse: '!' Reverse .

    $default  reduce using rule 60 (Reverse)


State 35

    2 StatementList: Statement ';' . StatementList
    3              | Statement ';' .

    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    BOOL      shift, and go to state 7
    STRING    shift, and go to state 8
    IfStmt    shift, and go to state 9
    LoopStmt  shift, and go to state 10
    PRINT     shift, and go to state 11
    WHILE     shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    $end      reduce using rule 3 (StatementList)
    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    '}'       reduce using rule 3 (StatementList)
    $default  reduce using rule 59 (SignOpt)

    StatementList    go to state 73
    Statement        go to state 17
    DeclarationStmt  go to state 18
    Type             go to state 19
    TypeName         go to state 20
    Expr             go to state 21
    AndExpr          go to state 22
    CmprExpr         go to state 23
    AddExpr          go to state 24
    MulExpr          go to state 25
    UnaExpr          go to state 26
    SignOpt          go to state 27
    Reverse          go to state 28
    PrintStmt        go to state 29


State 36

   21 Ident: IDENT .

    $default  reduce using rule 21 (Ident)


State 37

   14 DeclarationStmt: Type Ident . LitInit
   15                | Type Ident . IndHead Expr IndEnd

    '='  shift, and go to state 74
    '['  shift, and go to state 75

    $default  reduce using rule 24 (LitInit)

    LitInit  go to state 76
    IndHead  go to state 77


State 38

   10 Statement: Expr LeaveExpr . Assign

    '='  shift, and go to state 78

    $default  reduce using rule 34 (Assign)

    Assign  go to state 79


State 39

   32 or: OR .

    $default  reduce using rule 32 (or)


State 40

   29 Expr: AndExpr or . Expr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 80
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 41

   43 Cmpr: BIG_EQU .

    $default  reduce using rule 43 (Cmpr)


State 42

   42 Cmpr: SMALL_EQU .

    $default  reduce using rule 42 (Cmpr)


State 43

   44 Cmpr: EQUAL .

    $default  reduce using rule 44 (Cmpr)


State 44

   45 Cmpr: NOT_EQUAL .

    $default  reduce using rule 45 (Cmpr)


State 45

   37 and: AND .

    $default  reduce using rule 37 (and)


State 46

   40 Cmpr: '<' .

    $default  reduce using rule 40 (Cmpr)


State 47

   41 Cmpr: '>' .

    $default  reduce using rule 41 (Cmpr)


State 48

   35 AndExpr: CmprExpr and . AndExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    AndExpr   go to state 81
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 49

   38 CmprExpr: CmprExpr Cmpr . AddExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    AddExpr  go to state 82
    MulExpr  go to state 25
    UnaExpr  go to state 26
    SignOpt  go to state 27
    Reverse  go to state 28


State 50

   48 Add: '+' .

    $default  reduce using rule 48 (Add)


State 51

   49 Add: '-' .

    $default  reduce using rule 49 (Add)


State 52

   46 AddExpr: MulExpr Add . AddExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    AddExpr  go to state 83
    MulExpr  go to state 25
    UnaExpr  go to state 26
    SignOpt  go to state 27
    Reverse  go to state 28


State 53

   52 Mul: '*' .

    $default  reduce using rule 52 (Mul)


State 54

   53 Mul: '/' .

    $default  reduce using rule 53 (Mul)


State 55

   54 Mul: '%' .

    $default  reduce using rule 54 (Mul)


State 56

   50 MulExpr: UnaExpr Mul . MulExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    MulExpr  go to state 84
    UnaExpr  go to state 26
    SignOpt  go to state 27
    Reverse  go to state 28


State 57

   68 OneArith: INC .

    $default  reduce using rule 68 (OneArith)


State 58

   69 OneArith: DEC .

    $default  reduce using rule 69 (OneArith)


State 59

   25 Literal: INT_LIT .

    $default  reduce using rule 25 (Literal)


State 60

   26 Literal: FLOAT_LIT .

    $default  reduce using rule 26 (Literal)


State 61

   76 BracHead: '(' .

    $default  reduce using rule 76 (BracHead)


State 62

   27 Literal: '"' . str '"'

    STRING_LIT  shift, and go to state 85

    str  go to state 86


State 63

   62 Atom: Ident .
   63     | Ident . OneArith
   67     | Ident . IndHead Expr IndEnd

    INC  shift, and go to state 57
    DEC  shift, and go to state 58
    '['  shift, and go to state 75

    $default  reduce using rule 62 (Atom)

    OneArith  go to state 87
    IndHead   go to state 88


State 64

   65 Atom: Literal .

    $default  reduce using rule 65 (Atom)


State 65

   55 UnaExpr: SignOpt Atom .

    $default  reduce using rule 55 (UnaExpr)


State 66

   64 Atom: OneArith . Ident

    IDENT  shift, and go to state 36

    Ident  go to state 89


State 67

   66 Atom: BracHead . Expr BracEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 90
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 68

   70 Boolean: TRUE .

    $default  reduce using rule 70 (Boolean)


State 69

   71 Boolean: FALSE .

    $default  reduce using rule 71 (Boolean)


State 70

   56 UnaExpr: Reverse Boolean .

    $default  reduce using rule 56 (UnaExpr)


State 71

   72 PrintStmt: PRINT '(' Expr . LeavePrint

    ')'  shift, and go to state 91

    LeavePrint  go to state 92


State 72

    4 StatementList: WHILE '(' Expr . LeaveExpr ')' NewScope StatementList EndScope StatementList
    5              | WHILE '(' Expr . LeaveExpr ')' NewScope StatementList EndScope

    $default  reduce using rule 31 (LeaveExpr)

    LeaveExpr  go to state 93


State 73

    2 StatementList: Statement ';' StatementList .

    $default  reduce using rule 2 (StatementList)


State 74

   22 LitInit: '=' . Literal
   23        | '=' . Boolean

    TRUE       shift, and go to state 68
    FALSE      shift, and go to state 69
    INT_LIT    shift, and go to state 59
    FLOAT_LIT  shift, and go to state 60
    '"'        shift, and go to state 62

    Literal  go to state 94
    Boolean  go to state 95


State 75

   74 IndHead: '[' .

    $default  reduce using rule 74 (IndHead)


State 76

   14 DeclarationStmt: Type Ident LitInit .

    $default  reduce using rule 14 (DeclarationStmt)


State 77

   15 DeclarationStmt: Type Ident IndHead . Expr IndEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 96
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 78

   33 Assign: '=' . Expr LeaveExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 97
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 79

   10 Statement: Expr LeaveExpr Assign .

    $default  reduce using rule 10 (Statement)


State 80

   29 Expr: AndExpr or Expr .

    $default  reduce using rule 29 (Expr)


State 81

   35 AndExpr: CmprExpr and AndExpr .

    $default  reduce using rule 35 (AndExpr)


State 82

   38 CmprExpr: CmprExpr Cmpr AddExpr .

    $default  reduce using rule 38 (CmprExpr)


State 83

   46 AddExpr: MulExpr Add AddExpr .

    $default  reduce using rule 46 (AddExpr)


State 84

   50 MulExpr: UnaExpr Mul MulExpr .

    $default  reduce using rule 50 (MulExpr)


State 85

   28 str: STRING_LIT .

    $default  reduce using rule 28 (str)


State 86

   27 Literal: '"' str . '"'

    '"'  shift, and go to state 98


State 87

   63 Atom: Ident OneArith .

    $default  reduce using rule 63 (Atom)


State 88

   67 Atom: Ident IndHead . Expr IndEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    Expr      go to state 99
    AndExpr   go to state 22
    CmprExpr  go to state 23
    AddExpr   go to state 24
    MulExpr   go to state 25
    UnaExpr   go to state 26
    SignOpt   go to state 27
    Reverse   go to state 28


State 89

   64 Atom: OneArith Ident .

    $default  reduce using rule 64 (Atom)


State 90

   66 Atom: BracHead Expr . BracEnd

    ')'  shift, and go to state 100

    BracEnd  go to state 101


State 91

   73 LeavePrint: ')' .

    $default  reduce using rule 73 (LeavePrint)


State 92

   72 PrintStmt: PRINT '(' Expr LeavePrint .

    $default  reduce using rule 72 (PrintStmt)


State 93

    4 StatementList: WHILE '(' Expr LeaveExpr . ')' NewScope StatementList EndScope StatementList
    5              | WHILE '(' Expr LeaveExpr . ')' NewScope StatementList EndScope

    ')'  shift, and go to state 102


State 94

   22 LitInit: '=' Literal .

    $default  reduce using rule 22 (LitInit)


State 95

   23 LitInit: '=' Boolean .

    $default  reduce using rule 23 (LitInit)


State 96

   15 DeclarationStmt: Type Ident IndHead Expr . IndEnd

    ']'  shift, and go to state 103

    IndEnd  go to state 104


State 97

   33 Assign: '=' Expr . LeaveExpr

    $default  reduce using rule 31 (LeaveExpr)

    LeaveExpr  go to state 105


State 98

   27 Literal: '"' str '"' .

    $default  reduce using rule 27 (Literal)


State 99

   67 Atom: Ident IndHead Expr . IndEnd

    ']'  shift, and go to state 103

    IndEnd  go to state 106


State 100

   77 BracEnd: ')' .

    $default  reduce using rule 77 (BracEnd)


State 101

   66 Atom: BracHead Expr BracEnd .

    $default  reduce using rule 66 (Atom)


State 102

    4 StatementList: WHILE '(' Expr LeaveExpr ')' . NewScope StatementList EndScope StatementList
    5              | WHILE '(' Expr LeaveExpr ')' . NewScope StatementList EndScope

    '{'  shift, and go to state 1

    $default  reduce using rule 7 (NewScope)

    NewScope  go to state 107


State 103

   75 IndEnd: ']' .

    $default  reduce using rule 75 (IndEnd)


State 104

   15 DeclarationStmt: Type Ident IndHead Expr IndEnd .

    $default  reduce using rule 15 (DeclarationStmt)


State 105

   33 Assign: '=' Expr LeaveExpr .

    $default  reduce using rule 33 (Assign)


State 106

   67 Atom: Ident IndHead Expr IndEnd .

    $default  reduce using rule 67 (Atom)


State 107

    4 StatementList: WHILE '(' Expr LeaveExpr ')' NewScope . StatementList EndScope StatementList
    5              | WHILE '(' Expr LeaveExpr ')' NewScope . StatementList EndScope

    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    BOOL      shift, and go to state 7
    STRING    shift, and go to state 8
    IfStmt    shift, and go to state 9
    LoopStmt  shift, and go to state 10
    PRINT     shift, and go to state 11
    WHILE     shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    $default  reduce using rule 59 (SignOpt)

    StatementList    go to state 108
    Statement        go to state 17
    DeclarationStmt  go to state 18
    Type             go to state 19
    TypeName         go to state 20
    Expr             go to state 21
    AndExpr          go to state 22
    CmprExpr         go to state 23
    AddExpr          go to state 24
    MulExpr          go to state 25
    UnaExpr          go to state 26
    SignOpt          go to state 27
    Reverse          go to state 28
    PrintStmt        go to state 29


State 108

    4 StatementList: WHILE '(' Expr LeaveExpr ')' NewScope StatementList . EndScope StatementList
    5              | WHILE '(' Expr LeaveExpr ')' NewScope StatementList . EndScope

    '}'  shift, and go to state 109

    EndScope  go to state 110


State 109

    8 EndScope: '}' .

    $default  reduce using rule 8 (EndScope)


State 110

    4 StatementList: WHILE '(' Expr LeaveExpr ')' NewScope StatementList EndScope . StatementList
    5              | WHILE '(' Expr LeaveExpr ')' NewScope StatementList EndScope .

    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    BOOL      shift, and go to state 7
    STRING    shift, and go to state 8
    IfStmt    shift, and go to state 9
    LoopStmt  shift, and go to state 10
    PRINT     shift, and go to state 11
    WHILE     shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    $end      reduce using rule 5 (StatementList)
    TRUE      reduce using rule 61 (Reverse)
    FALSE     reduce using rule 61 (Reverse)
    '}'       reduce using rule 5 (StatementList)
    $default  reduce using rule 59 (SignOpt)

    StatementList    go to state 111
    Statement        go to state 17
    DeclarationStmt  go to state 18
    Type             go to state 19
    TypeName         go to state 20
    Expr             go to state 21
    AndExpr          go to state 22
    CmprExpr         go to state 23
    AddExpr          go to state 24
    MulExpr          go to state 25
    UnaExpr          go to state 26
    SignOpt          go to state 27
    Reverse          go to state 28
    PrintStmt        go to state 29


State 111

    4 StatementList: WHILE '(' Expr LeaveExpr ')' NewScope StatementList EndScope StatementList .

    $default  reduce using rule 4 (StatementList)
